@@ -12,6 +12,7 @@ next version - not released yet
 ===============================
 + DVB: Show current event time in the status bar
 + DVB: Add context menu to the navigation dialog
+! Ticket #3666, DVB: Don't clear the channel list on saving new scan result
 ! Ticket #4436, DVB: Improve compatibility with certain tuners
 
 
